# taishell

./: LICENSE  README.md
include/psp2kern/: sblssmgr.h
include/psp2kern/io/: dirent.h
include/taishell/: logger.h  plugin.h  tai_file.h  utils.h
src/: CMakeLists.txt  exports.h  list.c  list.h  logger.c  logger.h  module.h  plugins.c  plugins.h  registry.c  registry.h  taishell.c  taishell.yml  utils.c  utils.h
src/gui/: actions.c  actions.h  blit.c  blit.h  gui.c  gui.yml  menu.c  menu.h
src/plugins/: CMakeLists.txt
src/plugins/ftpd/: ftpd.c  ftpd.yml
src/plugins/ftpd/libftpvita/: compat.h  ftpvita.c  sscanf.c
tools/: CMakeLists.txt  mktai.c
